Add post_helper method & select field

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,7 +22,12 @@
   </div>
 
   <div class="field">
-    <%= f.label :published_at %>
+    <%= f.label :status %>
+    <%= f.select :status, ['Draft', 'Published', 'Scheduled'], selected: status_for(@post) %>
+  </div>
+
+  <div class="field">
+    <%= f.label :published_at, 'Publish At' %>
     <%= f.datetime_select :published_at %>
   </div>
 
